"Commented course info section"

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
     </section>    
 
-<section>
+<!-- <section>
     <div class="w-full flex flex-col gap-[100px] items-center px-[30px]">
         <div class="w-full m-auto flex flex-col lg:flex-row gap-4">
         <div class="flex flex-1 flex-col lg:border items-center text-center gap-6 rounded-[20px] w-full h-[300px] py-[28px] px-[10px]">
@@ -46,7 +46,7 @@
         </div>
     </div>
 </div>
-</section>
+</section> -->
 
 <section class="px-[30px] my-[50px]">
     <div class=" flex flex-col bg-[#131313] lg:bg-black w-full mx-auto mt-[20px] lg:py-[60px] px-[50px] rounded-[30px]">
